k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  generation: 1
  name: sample-app-localhost
  namespace: playground
spec:
  ingressClassName: nginx
  rules:
  - host: sample-app.localdev.me
    http:
      paths:
      - backend:
          service:
            name: sample-app
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
